--- a/conet_tensorflow.ipynb
+++ b/conet_tensorflow.ipynb
@@ -15,7 +15,7 @@
     "# Dataset and evaluation protocols reused from\n",
     "# https://github.com/hexiangnan/neural_collaborative_filtering\n",
     "from Dataset import Dataset\n",
-    "from evaluate import evaluate_model"
+    "from evaluate import *"
    ]
   },
   {
